Bug 355746 - kaddressbook -> View -> deselect QR Code: does not hide QR Code immediately ...
Summary: kaddressbook -> View -> deselect QR Code: does not hide QR Code immediately ...
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-22 18:26 UTC by Achim Bohnet
Modified: 2015-11-24 06:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Achim Bohnet 2015-11-22 18:26:33 UTC
... on the right hand side

kaddressbook 15.08.02, qt 5.4.2

Reproducible: Always

Steps to Reproduce:
1. start kaddressbook
2. select an address -> QR Code is shown
2. View -> deselect QR Code


Actual Results:  
-> address info on the right hand side still shows  QR Code

Expected Results:  
QR Code info vanishes immediately

Selecting another user hides the QR information
Comment 1 Laurent Montel 2015-11-23 05:50:41 UTC
I confirm it
Comment 2 Laurent Montel 2015-11-24 06:00:28 UTC
Git commit 86d69bed8aa203a8e4111ca3b2c0892f99325996 by Montel Laurent.
Committed on 24/11/2015 at 06:00.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix Bug 355746 - kaddressbook -> View -> deselect QR Code: does not hide QR Code immediately ...

FIXED-IN: 5.1

M  +1    -1    akonadi-contact/src/contactviewer.cpp

http://commits.kde.org/kdepimlibs/86d69bed8aa203a8e4111ca3b2c0892f99325996