Fix Bug 355746 - kaddressbook -> View -> deselect QR Code: does not hide QR Code immediately ...

FIXED-IN: 5.1
BUG: 355746